--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        targets:
+        target:
           - "x86_64-unknown-linux-musl"
           - "aarch64-unknown-linux-musl"
           - "x86_64-pc-windows-msvc"
