--- a/renovate.json
+++ b/renovate.json
@@ -1,8 +1,1 @@
-{
-	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
-	"extends": [
-		"config:recommended",
-		":semanticCommitTypeAll(chore)"
-	],
-	"rangeStrategy": "bump"
-}
+{ "enabled": false }
